# rust-text-editor

./: .env  Cargo.toml
src/: error.rs  lib.rs  main.rs
